tf_experiments_scripts/s=poggio
Processing /home_simulation_research/hbf_tensorflow_code/my_tf_proj
Processing /home_simulation_research/hbf_tensorflow_code/my_tf_proj
Requirement already satisfied: numpy in /usr/local/lib/python3.5/dist-packages (from my-tf-proj==0.1.0)
Requirement already satisfied: namespaces in /usr/local/lib/python3.5/dist-packages (from my-tf-proj==0.1.0)
Requirement already satisfied: pdb in /usr/local/lib/python3.5/dist-packages (from my-tf-proj==0.1.0)
Requirement already satisfied: scikit-learn in /usr/local/lib/python3.5/dist-packages (from my-tf-proj==0.1.0)
Requirement already satisfied: scipy in /usr/local/lib/python3.5/dist-packages (from my-tf-proj==0.1.0)
Requirement already satisfied: six>=1.10.0 in /usr/local/lib/python3.5/dist-packages (from namespaces->my-tf-proj==0.1.0)
Requirement already satisfied: pyyaml in /usr/local/lib/python3.5/dist-packages (from pdb->my-tf-proj==0.1.0)
Requirement already satisfied: argparse in /usr/local/lib/python3.5/dist-packages (from pdb->my-tf-proj==0.1.0)
Requirement already satisfied: python-gnupg in /usr/local/lib/python3.5/dist-packages (from pdb->my-tf-proj==0.1.0)
Installing collected packages: my-tf-proj
  Running setup.py install for my-tf-proj: started
Requirement already satisfied: numpy in /usr/local/lib/python3.5/dist-packages (from my-tf-proj==0.1.0)
Requirement already satisfied: namespaces in /usr/local/lib/python3.5/dist-packages (from my-tf-proj==0.1.0)
Requirement already satisfied: pdb in /usr/local/lib/python3.5/dist-packages (from my-tf-proj==0.1.0)
Requirement already satisfied: scikit-learn in /usr/local/lib/python3.5/dist-packages (from my-tf-proj==0.1.0)
Requirement already satisfied: scipy in /usr/local/lib/python3.5/dist-packages (from my-tf-proj==0.1.0)
Requirement already satisfied: six>=1.10.0 in /usr/local/lib/python3.5/dist-packages (from namespaces->my-tf-proj==0.1.0)
Requirement already satisfied: python-gnupg in /usr/local/lib/python3.5/dist-packages (from pdb->my-tf-proj==0.1.0)
Requirement already satisfied: argparse in /usr/local/lib/python3.5/dist-packages (from pdb->my-tf-proj==0.1.0)
Requirement already satisfied: pyyaml in /usr/local/lib/python3.5/dist-packages (from pdb->my-tf-proj==0.1.0)
Installing collected packages: my-tf-proj
  Running setup.py install for my-tf-proj: started
    Running setup.py install for my-tf-proj: finished with status 'done'
    Running setup.py install for my-tf-proj: finished with status 'done'
Successfully installed my-tf-proj-0.1.0
Successfully installed my-tf-proj-0.1.0
I tensorflow/stream_executor/dso_loader.cc:135] successfully opened CUDA library libcublas.so.8.0 locally
I tensorflow/stream_executor/dso_loader.cc:135] successfully opened CUDA library libcublas.so.8.0 locally
I tensorflow/stream_executor/dso_loader.cc:135] successfully opened CUDA library libcudnn.so.5 locally
I tensorflow/stream_executor/dso_loader.cc:135] successfully opened CUDA library libcudnn.so.5 locally
I tensorflow/stream_executor/dso_loader.cc:135] successfully opened CUDA library libcufft.so.8.0 locally
I tensorflow/stream_executor/dso_loader.cc:135] successfully opened CUDA library libcufft.so.8.0 locally
I tensorflow/stream_executor/dso_loader.cc:135] successfully opened CUDA library libcuda.so.1 locally
I tensorflow/stream_executor/dso_loader.cc:135] successfully opened CUDA library libcuda.so.1 locally
I tensorflow/stream_executor/dso_loader.cc:135] successfully opened CUDA library libcurand.so.8.0 locally
I tensorflow/stream_executor/dso_loader.cc:135] successfully opened CUDA library libcurand.so.8.0 locally
#!/usr/bin/env python
#!/usr/bin/python
/usr/local/lib/python3.5/dist-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.
  "This module will be removed in 0.20.", DeprecationWarning)
Traceback (most recent call last):
  File "/home_simulation_research/hbf_tensorflow_code/tf_experiments_scripts/batch_main.py", line 28, in <module>
    import my_tf_pkg as mtf
  File "/usr/local/lib/python3.5/dist-packages/my_tf_pkg/__init__.py", line 23, in <module>
    from my_tf_pkg.data_central_manager import *
  File "/usr/local/lib/python3.5/dist-packages/my_tf_pkg/data_central_manager.py", line 61
    print( '===> os.listdir('.'): ', os.listdir('.') )
                                  ^
SyntaxError: invalid syntax
#!/usr/bin/env python
#!/usr/bin/python
/usr/local/lib/python3.5/dist-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.
  "This module will be removed in 0.20.", DeprecationWarning)
Traceback (most recent call last):
  File "/home_simulation_research/hbf_tensorflow_code/tf_experiments_scripts/batch_main.py", line 28, in <module>
    import my_tf_pkg as mtf
  File "/usr/local/lib/python3.5/dist-packages/my_tf_pkg/__init__.py", line 23, in <module>
    from my_tf_pkg.data_central_manager import *
  File "/usr/local/lib/python3.5/dist-packages/my_tf_pkg/data_central_manager.py", line 61
    print( '===> os.listdir('.'): ', os.listdir('.') )
                                  ^
SyntaxError: invalid syntax
